--- a/.gitignore
+++ b/.gitignore
@@ -8,15 +8,20 @@
 !*.svg
 !*.pdf
 !*.xml
+!*.jar
+!*.so
 !resources.qrc
 !android/
+!android-build/
+!android-build/libs/
+!android-build/libs/armeabi-v7a/
 !assets/
 !images/
 !images/icons/
-!images/batt_images
-!images/icons/connection
-!images/icons/settings
-!images/icons/trigger
+!images/batt_images/
+!images/icons/connection/
+!images/icons/settings/
+!images/icons/trigger/
 moc*
 qrc_qml*
 qrc_resources*
